--- a/mvp-example/src/main/res/layout/activity_main.xml
+++ b/mvp-example/src/main/res/layout/activity_main.xml
@@ -8,10 +8,19 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.mvp.mvptemplateproject.MainActivity">
+    tools:context=".ui.activities.MainActivity">
 
     <TextView
+        android:id="@+id/tvText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"/>
+
+    <Button
+        android:id="@+id/btnSomeAction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="@string/button_some_action_text"/>
 </RelativeLayout>
